<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_12" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="101" translatesAutoresizingMaskIntoConstraints="NO" id="8aE-Wx-oJf">
                                <rect key="frame" x="20" y="128" width="353" height="24"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D5J-xc-2w7" userLabel="Question Title Label">
                                        <rect key="frame" x="0.0" y="0.0" width="126" height="24"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <color key="textColor" name="YP White (iOS)"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLH-nf-TEJ" userLabel="Index Label">
                                        <rect key="frame" x="227" y="0.0" width="126" height="24"/>
                                        <color key="tintColor" name="YP White (iOS)"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <color key="textColor" name="YP White (iOS)"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="ELD-nR-tLe"/>
                                    <constraint firstAttribute="trailing" secondItem="gLH-nf-TEJ" secondAttribute="trailing" id="sWj-3f-BNL"/>
                                </constraints>
                            </stackView>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cpx-De-gsq" userLabel="Preview Image">
                                <rect key="frame" x="20" y="172" width="353" height="529.66666666666663"/>
                                <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="cpx-De-gsq" secondAttribute="height" multiplier="2:3" id="67k-qm-RhX"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="20"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xch-iJ-dL2">
                                <rect key="frame" x="20" y="724" width="353" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ga-h4-utG" userLabel="No button">
                                        <rect key="frame" x="0.0" y="0.0" width="166.66666666666666" height="60"/>
                                        <color key="backgroundColor" name="YP White (iOS)"/>
                                        <accessibility key="accessibilityConfiguration" identifier="No"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="ZdB-0k-Uyi"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <color key="tintColor" name="YP Black (iOS)"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Нет">
                                            <color key="titleColor" name="YP Black (iOS)"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OBW-Aq-l6p"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lr8-3V-2E4" userLabel="Yes button">
                                        <rect key="frame" x="186.66666666666663" y="0.0" width="166.33333333333337" height="60"/>
                                        <color key="backgroundColor" name="YP White (iOS)"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="RFZ-R6-eTx"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <color key="tintColor" name="YP Black (iOS)"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Да">
                                            <color key="titleColor" name="YP Black (iOS)"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lJX-o1-5vH"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="Lr8-3V-2E4" firstAttribute="width" secondItem="5ga-h4-utG" secondAttribute="width" id="o9s-Id-w3y"/>
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма больше чем 6?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ge-jq-SLd" userLabel="Question Label">
                                <rect key="frame" x="43" y="626" width="307" height="78"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="78" id="8b3-Lg-yai"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="78" id="VTy-XB-oyB"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                <color key="textColor" name="YP White (iOS)"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="VvW-nY-7JF">
                                <rect key="frame" x="186.66666666666666" y="416" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black (iOS)"/>
                        <constraints>
                            <constraint firstItem="8aE-Wx-oJf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="14G-uL-mSe"/>
                            <constraint firstItem="xch-iJ-dL2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="3nx-rD-ceZ"/>
                            <constraint firstItem="VvW-nY-7JF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4r9-uE-UpZ"/>
                            <constraint firstItem="8aE-Wx-oJf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="5pi-a7-Hgm"/>
                            <constraint firstItem="cpx-De-gsq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="BIF-wA-UfF"/>
                            <constraint firstItem="8aE-Wx-oJf" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="BVW-j3-uFB"/>
                            <constraint firstItem="xch-iJ-dL2" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ms1-Cb-Thd"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xch-iJ-dL2" secondAttribute="trailing" constant="20" id="SE8-BN-Skx"/>
                            <constraint firstItem="5ge-jq-SLd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43" id="eEL-41-6ot"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cpx-De-gsq" secondAttribute="trailing" constant="20" id="fqy-GE-v2a"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5ge-jq-SLd" secondAttribute="bottom" constant="80" id="i4Q-5f-s99"/>
                            <constraint firstItem="cpx-De-gsq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="54" id="vtl-6s-qTz"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5ge-jq-SLd" secondAttribute="trailing" constant="43" id="x6A-RX-iu7"/>
                            <constraint firstItem="VvW-nY-7JF" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xxC-Uw-eZY"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="VvW-nY-7JF" id="gfJ-Mv-sbc"/>
                        <outlet property="counterLabel" destination="gLH-nf-TEJ" id="IUh-sd-rta"/>
                        <outlet property="imageView" destination="cpx-De-gsq" id="60r-XK-16H"/>
                        <outlet property="noButton" destination="5ga-h4-utG" id="LEo-Zh-95B"/>
                        <outlet property="textLabel" destination="5ge-jq-SLd" id="1qV-Ft-mfD"/>
                        <outlet property="yesButton" destination="Lr8-3V-2E4" id="bz7-xC-qdp"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.725190839694655" y="54.929577464788736"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black (iOS)">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White (iOS)">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
